# LatticeBoltzmannMethod-Fonnesu-Grassi-Guffanti

./: .gitignore  CMakeLists.txt  LICENSE  README.md  notes.md  requirements.txt
examples/: 1_LidDrivenCavity.cpp  1_LidDrivenCavity129.cpp  2_Parabolic.cpp  2_Pouseille.cpp  3_Vortex.cpp  4_ComplexGeometry.cpp  5_RandomGeneration.cpp  6_FlowAnalysis.cpp  7_FlatBottomFoil.cpp  7_WingProfile1.cpp  8_1_NACAProfileFlight.cpp  8_2_NACAProfileTakeOff.cpp  9_Conduct.cpp  CMakeLists.txt  NACA-foil-takeoff.txt  NACA-foil.txt  README.md  duct1.txt  duct2.txt  supersonic-profile.txt  wing1.txt  wing2.txt
include/: aliases.hpp  boundary.hpp  collisionModel.hpp  inletInitializer.hpp  lattice.hpp  lattice2D.hpp  latticeNode.hpp  latticeReader.hpp  latticeReader2D.hpp  lbm.hpp  velocitySet.hpp
llalbm/: CMakeLists.txt
llalbm/include/: llalbm.hpp
llalbm/src/core/: Lattice.hpp  PolicyTypes.hpp  README.md
llalbm/src/core/boundaries/: BounceBackPolicy.hpp  OpenBoundaryPolicy.hpp  PSBounceBackPolicy.hpp  README.md  ZouHePolicy.hpp
llalbm/src/core/collisions/: BGKCollision.hpp  README.md  TRTCollision.hpp
llalbm/src/core/equilibriums/: DefaultEquilibrium.hpp  Equilibrium.hpp  README.md
llalbm/src/core/initializers/: InletOutletInitializer.hpp  README.md  updateMacro.cu  updateMacro.hpp  update_macro.cu  update_macro.hpp
llalbm/src/core/lattices/: DistributedLattice.hpp  GPULattice.hpp  Lattice.hpp  LatticeConfiguration.hpp  README.md
llalbm/src/core/parallelization/: CUDAPolicy.hpp  MPIPolicy.hpp  OMPPolicy.hpp  OpenACCPolicy.hpp  README.md  STDExecPolicy.hpp  SerialPolicy.hpp
llalbm/src/utils/: MultiDimensionalLoop.hpp  README.md  aliases.hpp
llalbm/src/utils/analysis/: FlowAnalyzer.hpp  NodeIdentification.hpp  README.md
llalbm/src/utils/generation/: ConstructionInfo.hpp  ConstructionTools.hpp  README.md
llalbm/src/utils/loggers/: Logger.hpp  README.md
llalbm/src/utils/readers/: LatticeReader.hpp  README.md
llalbm/src/utils/writers/: LatticeWriter.hpp  README.md
resources/: velocitySets
resources/lattices/: 2d_10_5_test2  2d_10_6_test2  2d_5_5_test1  2d_5_6_test1  README.md
resources/lattices/lid_driven_cavity/: 2d_100_100_lid_driven  lattice
resources/lattices/lid_driven_cavity/200/: lattice.mtx
resources/lattices/lid_driven_cavity/weak_scalability/100/: lattice.mtx
resources/lattices/lid_driven_cavity/weak_scalability/500/: lattice.mtx
resources/patterns/: esito.mtx  esito.txt  prova2.txt
scripts/: README.md  ani.py  animate.py  build_obstacle_file.py  graph.py  plot_data.py  plot_data_x.py  plot_data_y.py  plot_lift_drag.py  plot_obstacle_layout_2d.py  produce_video.py  render.py  translate.py
src/: Makefile  boundary.cpp  boundary.hpp  collisionModel.cpp  collisionModel.hpp  lattice.cpp  lattice.hpp  lattice2D.cpp  lattice2D.hpp  latticeNode.hpp  lbm.cpp  lbm.hpp  main  main.cpp  velocitySet.cpp  velocitySet.hpp
src/Python_scripts/: translate.py
src/lbm/: boundary.cpp  collisionModel.cpp  lattice.cpp  lattice2D.cpp  latticeReader.cpp  latticeReader2D.cpp  lbm.cpp  velocitySet.cpp
test/: CMakeLists.txt  CmakeLists.txt  LatticeReadingTest.cpp
test/assets/: lattice.txt  lid-lattice.txt  reading_test.txt
test/unit/: BGKParameterTest.cpp  CUDATRTLidDrivenTest.cpp  GenerationTest.cpp  InletUpdates.cpp  LatticeReadingTest.cpp  LidExecTest.cpp  LidFromGeneration.cpp  LidWithOMPPSobstacle.cpp  LidWithObstacle.cpp  LidWithPSObstacle.cpp  LiddrivenTest.cpp  OMPTRTLidDrivenTest.cpp  ObstacleFromFile.cpp  ObstacleGeneration.cpp  OpenACCLidDrivenTest.cpp  OpenBoundaryOutlet.cpp  PerimeterGeneration.cpp  RandomObstacle.cpp  STDExecTRTLidDrivenTest.cpp  SphereGenerationTest.cpp  TRTLidDrivenTest.cpp
